# strapper

./: Cargo.toml  Dockerfile
agent/: Cargo.toml  Dockerfile
agent/src/: main.rs
proto/: .gitignore  Cargo.toml  build.rs
proto/proto/: strapper.proto
proto/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
