[package]
name = "agent"
version = "0.1.0"
authors = ["Joe Hirschfeld <joe@ibj.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tonic = "0.4"
regex = "1"
prost = "0.6"
eui48 = "1.1"
futures-util="0.3.12"
tokio = {version="1.0", features=["rt", "net", "fs"]}
structopt = "0.3"
systemd = "0.8.2"
rtnetlink = "0.7"
proto = { path = "../proto" }
libc = "0.2.82"
