[package]
name = "server"
version = "0.1.0"
authors = ["Joe Hirschfeld <joe@ibj.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tonic = "0.4"
prost = "0.6"
tokio = {version="1.0", features=["rt", "rt-multi-thread", "macros", "net"]}
structopt = "0.3"
proto = { path = "../proto" }
reqwest = { version = "0.11.0", features=["json"] }
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
ipnet="2.3"
itertools="0.10"
futures="0.3"
log="0.4"
env_logger="0.8"
sha2 = "0.9.2"
